added some more html for the body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div id="questionsCon" class="hide">
+            <div id="question">Question</div>
+            <div> Time Left <span id="time">3:00</span></div>
+            <div>Score<span id="score"></span></div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Choice 1</button>
+                <button class="btn">Choice 2</button>
+                <button class="btn">Choice 3</button>
+                <button class="btn">Choice 4</button>
+
+            </div>
+        </div>
+        <div id="choices">
+            <button id="start-btn" class="start-btn btn">Start</button>
+            <button id="next-btn" class="next-btn btn hide">Next Question</button>
+            <button id="submit-btn" class="submit-btn btn hide">Submit</button>
+        </div>
+
+    </div> 
 </body>
+
 </html>
