--- a/index.html
+++ b/index.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Code Quiz </title>
-    <link rel="stylesheet" href="stylesheet.css">
-
+    <title> JS Quiz </title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div id="questionsCon" class="hide">
-            <div id="question">Question</div>
-            <div> Time Left <span id="time">3:00</span></div>
-            <div>Score<span id="score"></span></div>
-            <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Choice 1</button>
-                <button class="btn">Choice 2</button>
-                <button class="btn">Choice 3</button>
-                <button class="btn">Choice 4</button>
+   <header>
+       <h3>
+           High Scores
+       </h3>
+       <h3>
+           Time: <span class="time" id="timer"></span>
+       </h3>
+   </header>
+   <main id="main">
 
-            </div>
-        </div>
-        <div id="choices">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Next Question</button>
-            <button id="submit-btn" class="submit-btn btn hide">Submit</button>
-        </div>
-
-    </div> 
-</body>
+   </main>
 
 <script src="script.js"></script>
+</body>
 </html>
